2024-04-15T03:32:52Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8682883194 # 183
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-15
* notice: last 14d: unq all: 14 20
* notice: prev accum: outdated-unq outdated-all / unq all: 1883 4035 / 1898 4054
* notice: next accum: outdated-unq outdated-all / unq all: 1883 4035 / 1899 4055
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-14]

2024-04-14T22:33:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8681356736 # 182
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-14
* notice: last 14d: unq all: 13 19
* notice: prev accum: outdated-unq outdated-all / unq all: 1815 3939 / 1883 4035
* notice: next accum: outdated-unq outdated-all / unq all: 1883 4035 / 1898 4054
* notice: prev exec diff / last date diff / accum: unq all: +15 +19 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-02-22 2024-02-23 2024-02-24 2024-02-25 2024-02-26 2024-02-27 2024-02-28 2024-02-29 2024-03-01 2024-03-02 2024-03-03 2024-03-04 2024-03-05 2024-03-06 2024-03-07] / [2024-04-04 2024-04-08 2024-04-09 2024-04-12 2024-04-13]

2024-03-07T08:00:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8184758204 # 181
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-07
* notice: last 14d: unq all: 45 94
* notice: prev accum: outdated-unq outdated-all / unq all: 1815 3939 / 1877 4028
* notice: next accum: outdated-unq outdated-all / unq all: 1815 3939 / 1883 4035
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -1 -1 / +6 +7 -0 -0 / 6 7