@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-04-15T03:32:52Z",
+  "timestamp" : "2024-04-15T08:18:08Z",
   "count_outdated" : 4035,
   "uniques_outdated" : 1883,
-  "count" : 4055,
-  "uniques" : 1899,
+  "count" : 4056,
+  "uniques" : 1900,
   "clones" : [
     {
       "timestamp": "2024-04-04T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2024-04-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
