@@ -1,6 +1,6 @@
 {
-  "count": 20,
-  "uniques": 14,
+  "count": 21,
+  "uniques": 15,
   "clones": [
     {
       "timestamp": "2024-04-04T00:00:00Z",
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2024-04-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
